objects/OUV_Forecast_Snapshot__c.object
<CustomObject>
    <label>OUV Forecast Snapshot</label>
    <nameField>
        <displayFormat>FS-{0000000}</displayFormat>
        <label>OUV Forecast Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Forecast Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <formula>TEXT (Annual_Market_Summary__r.OUV_Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Status__c</fullName>
        <description>Status of the Forecast.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Fiscal_Year__c</fullName>
        <formula>TEXT(Annual_Market_Summary__r.OUV_FinancialYear__c)</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Snapshot_Month__c</fullName>
        <description>The month the snapshot was taken.</description>
        <label>Snapshot Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Market_Summary__c</fullName>
        <label>Annual Market Summary</label>
        <referenceTo>OUV_AnnualMarketSummary__c</referenceTo>
        <relationshipLabel>OUV Forecast Snapshots</relationshipLabel>
        <relationshipName>OUV_Forecast_Snapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <recordTypes>
        <fullName>OUV_Forecast_Snapshot_Editable</fullName>
        <active>true</active>
        <description>Record Type for when the status is &quot;In Progress&quot;.</description>
        <label>OUV Forecast Snapshot Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_Forecast_Snapshot_Read_Only</fullName>
        <active>true</active>
        <description>Record Type for when the status is &quot;Submitted&quot;.</description>
        <label>OUV Forecast Snapshot Read Only</label>
    </recordTypes>
</CustomObject>